project/stage/tests/accept/function_params_temp.ul
// this will fail in a later stage due to deformed main
int main(int thing, int _otherThing123){
}