project/stage/tests/reject/reject_type_assign.ul
void main(){
  int thing;
  thing = void;
}